static/css/main.css
/* ... */
.information-text h2 {
  font-size: 2rem;
  line-height: 2.2rem;
  padding: 1rem 0;
}

.light-green-text p {
  padding: 1rem 0;
}

.light-green-links {
  list-style: none;
  padding: 0;
}

.green-links a {
  text-decoration: none;
  color: var(--black);
  font-weight: bold;
  display: flex;
  -webkit-justify-content: space-between;
  margin: 1rem 0;
  border-bottom: 0.0625rem solid var(--bottom-orange);
  padding-bottom: 1rem;
  width: 100%;
}

.green-links:last-child {
  border-bottom: none;
}

.background-green-text h2 {
  display: flex;
  flex-direction: column;
  align-items: center;
  font-size: 2rem;
}

.background-green-lists {
  text-decoration: none;
  display: flex;
  justify-content: center;
  flex-direction: column;
  align-content: center;
  list-style: none;
  padding: 2rem 0;
}

@media (min-width: 70rem) {
  .background-green-lists {
    flex-direction: unset;
    gap: 2rem;
  }
}
.green-lists {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.green-lists h3 {
  color: var(--information-orange);
  display: flex;
  justify-content: center;
}

@media (min-width: 70rem) {
  .green-lists {
    width: 15rem;
    display: flex;
    flex-direction: row;
  }
}

.green-symbol {
  padding: 1rem 0;
}

@media (min-width: 70rem) {
  .green-symbol {
    width: 3rem;
    margin: 0 auto;
  }
}

/*index.html, aanleg.html, onderhoud.html*/

.dark-green_background {
  background-color: var(--dark-green-text);
}

.dark-green-main {
  padding: 0 4rem;
  max-width: 90rem;
  margin: 0 auto;
}

@media (min-width: 62.5rem) {
  .dark-green-main {
    display: flex;
  }
}

.dark-green-main h3 {
  color: var(--white);
  padding: 1.5rem 0 1rem 0;
}

.dark-green-main p {
  color: var(--white);
  /* padding-bottom: 2rem; */
}

.dark-green-main h2 {
  color: var(--information-orange);
  line-height: 2rem;
  font-size: 1.875rem;
  padding-bottom: 1.3rem;
}

@media (min-width: 62.5rem) {
  .dark-green-text {
    width: 55%;
  }
}

.button-information {
  background-color: var(--information-orange);
  width: max-content;
}
.button-information p {
  color: var(--white);
  text-decoration: none;
  font-weight: bold;
  margin-top: 1rem;
  width: max-content;
  padding: 0.75rem 1.0625rem;
}

.dark-green-main img {
  height: 19rem;
  position: relative;
  object-fit: cover;
  overflow: hidden;
  margin-top: 3rem;
  clip-path: polygon(
    0 0,
    17.25rem 0,
    17.5rem 8.75rem,
    24.0625rem 8.75rem,
    24.0625rem 21.875rem,
    4.375rem 21.875rem,
    4.375rem 12.5rem,
    0 12.5rem
  );
}

.img-with_background {
  background-image: url(../images/half_circle_background.svg);
  background-size: 20rem;
  background-repeat: no-repeat;
  height: 32rem;
  display: flex;
  justify-content: flex-end;
  background-position: 0% 50%;
}

@media (min-width: 30rem) {
  .img-with_background {
    background-size: 30rem;
  }
}

/*index.html*/

.overlay-title {
  padding: 0 4rem;
}
.overlay-title h2 {
  padding-top: 2rem;
  color: var(--dark-green-text);
  font-size: 2rem;
}

.overlay-box-size {
  max-width: 90rem;
  margin: 0 auto;
}

.overlay {
  display: flex;
  width: 100%;
  overflow: scroll;
  flex-wrap: nowrap;
  flex-direction: row;
}

.overlay-detail {
  flex-shrink: 0;
  width: 19rem;
  margin-right: 2rem;
  padding-bottom: 2rem;
}

.overlay-detail img {
  object-fit: cover;
  aspect-ratio: 5/9;
}

.overlay-detail p {
  margin-bottom: 1rem;
  border-bottom: 0.0625rem solid var(--bottom-blue);
  padding: 3rem 0rem 1rem 0;
  font-size: 0.8125rem;
}

/*index.html, aanleg.html, onderhoud.html*/

.dubble-light-green {
  background-color: var(--hover-blue);
  margin-bottom: -35rem;
  padding-top: 3rem;
  padding: 0 4rem;
}

.light-green-main {
  flex-wrap: wrap;
  max-width: 90rem;
  margin: 0 auto;
}

.light-green-main h2 {
  color: var(--dark-blue);
  font-size: 2.3rem;
  padding: 3rem 0 1rem 0;
  width: 129%;
}

@media (min-width: 70rem) {
  .light-green-main {
    display: flex;
  }
}

.light-main-text {
  width: 50%;
  flex-grow: 1;
  flex-wrap: wrap;
}

@media (min-width: 70rem) {
  .light-main-text {
    padding-right: 10.625rem;
  }
}

.button-information a {
  text-decoration: none;
}

.light-main-summary {
  width: 50%;
}

.light-main-summary h2 {
  width: 140%;
}

@media (min-width: 70rem) {
  .light-main-summary h2 {
    width: 100%;
  }
}

.orange-symbol-summary {
  padding-bottom: 34rem;
  padding-left: 0;
  width: 71%;
}

.orange-symbol-summary li {
  display: flex;
  flex-direction: row-reverse;
  justify-content: flex-end;
  margin-bottom: 1rem;
  padding-bottom: 1rem;
  width: 280%;
  border-bottom: 0.0625rem solid var(--bottom-orange);
}

@media (min-width: 70rem) {
  .orange-symbol-summary li {
    width: 100%;
  }
}

.orange-symbol-summary li:last-child {
  border-bottom: none;
}

.orange-symbol img {
  width: 2.0625rem;
  padding-right: 1rem;
}

/* aanleg.html, onderhoud.html, contact.html */
.hero-component {
  background-image: url(../images/aanleg_hero-componen.jpeg);
  background-repeat: no-repeat;
  background-position: 50% 41%;
  background-size: cover;
  padding: 3rem 0;
}

.hero-box-size {
  max-width: 90rem;
  margin: 0 auto;
}

.page-name {
  background-color: var(--white);
  display: flex;
  position: relative;
  top: 2rem;
  left: 2rem;
  padding: 0.6875rem 0.6875rem;
  width: max-content;
}

.page-name a,
.page-references a {
  text-decoration: none;
  color: var(--black);
  padding: 0 1rem;
}

.hero-text {
  background-color: var(--white);
  padding: 0rem 1rem 2rem;
  margin: 4rem 1rem 4rem 2rem;
  max-width: 35.3125rem;
}

@media (min-width: 70rem) {
  .hero-text h1 {
    font-size: 4rem;
  }
  .hero-text p {
    font-size: 1.23rem;
  }
}

.hero-text h1 {
  margin-bottom: 2rem;
}

.link-to-contact {
  display: flex;
  margin-bottom: -3rem;
  justify-content: flex-end;
}

.hero-phone-data {
  background-color: var(--hover-blue);
  padding: 1rem 2rem 1rem 1rem;
}

.hero-phone-data h3 {
  font-family: "space-grotesk";
}

.hero-phone {
  display: flex;
}
/* ... */

